tests/od2trips/errors/incomplete_connections/to_missing2of2_allowed/errors.od2trips
Error: District '2' has no sink.
